Fixed build after renamimg and added additional check for env vars

--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -47,7 +47,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\4_Data.csproj" />
-    <ProjectReference Include="..\MessagebrokerPublisher\MessageBrokerPublisher.csproj" />
+    <ProjectReference Include="..\MessageBrokerPublisher\MessageBrokerPublisher.csproj" />
     <ProjectReference Include="..\Models\5_Models.csproj" />
     <ProjectReference Include="..\NotificationSystem\NotificationSystem.csproj" />
     <ProjectReference Include="..\Services\2_Services.csproj" />
