moved appsettings values to appsettings.development

--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
     "App": {
         "RabbitMQ": {
-            "Hostname": "",
-            "Username": "",
-            "Passowrd": ""
+            "Hostname": "localhost",
+            "Username": "guest",
+            "Passowrd": "guest"
         }
     },
     "Logging": {
