Add SendGrid to Config, we can now configure email sender

--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -4,6 +4,10 @@
             "Hostname": "",
             "Username": "",
             "Passowrd": ""
+        },
+        "SendGrid": {
+            "ApiKey": "",
+            "EmailFrom":  ""
         }
     },
     "Logging": {
