--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -4,6 +4,10 @@
             "Hostname": "localhost",
             "Username": "guest",
             "Passowrd": "guest"
+        },
+        "SendGrid": {
+            "ApiKey": "",
+            "EmailFrom": ""
         }
     },
     "Logging": {
