Fix typo in configuration

--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -3,7 +3,7 @@
         "RabbitMQ": {
             "Hostname": "localhost",
             "Username": "guest",
-            "Passowrd": "guest"
+            "Password": "guest"
         },
         "SendGrid": {
             "ApiKey": "",
