--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -3,7 +3,7 @@
         "RabbitMQ": {
             "Hostname": "",
             "Username": "",
-            "Passowrd": ""
+            "Password": ""
         },
         "SendGrid": {
             "ApiKey": "",
