--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   rabbitmq:
     image: 'bitnami/rabbitmq:latest'
     environment:
-      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
-      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
+      - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
     ports: 
       - 5672:5672
       - 5671:5671
@@ -52,9 +52,9 @@ services:
     depends_on:
       - rabbitmq
     environment:
-      - RABBITMQ_HOST_NAME=rabbitmq
-      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME}
-      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD}
+      - RABBITMQ_HOST_NAME=${App__RabbitMQ__Hostname}
+      - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
+      - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
       - SENDGRID_API_KEY=${SENDGRID_API_KEY}
       - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
     stdin_open: true
