--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "",
-            "EmailFrom": ""
+            "ApiKey": "test",
+            "EmailFrom": "test"
         }
     },
     "Logging": {
