Fixed feedback by Brend
fixed hardcoded url in API and producesresponsetypes. Deleted unneccesary files in identityserver. Added mailstatus in UserTaskStatus enum.

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -38,6 +38,10 @@
         "swagger": {
             "RedirectUrisSwagger": "https://localhost:5001/oauth2-redirect.html",
             "PostLogoutUrisSwagger": "https://localhost:5001"
+        },
+        "JobScheduler": {
+            "ClientId": "",
+            "ClientSecret": ""
         }
     },
     "AllowedHosts": "*"
