--- a/JobScheduler/Properties/launchSettings.json
+++ b/JobScheduler/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "profiles": {
     "JobScheduler": {
       "commandName": "Project",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
