--- a/JobScheduler/appsettings.json
+++ b/JobScheduler/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "App": {
+        "API": {
+            "ApiUrl": "https://localhost:5001/"
+        },
+        "IdentityServerConfig": {
+            "IdentityUrl": "https://localhost:5005/",
+            "ClientId": "dex-jobscheduler",
+            "ClientSecret": "dex-jobscheduler"
+        }
     }
-  }
+
 }
