--- a/JobScheduler/7_JobScheduler.csproj
+++ b/JobScheduler/7_JobScheduler.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\API\1_API.csproj" />
       <ProjectReference Include="..\Models\5_Models.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
 </Project>
