--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -16,6 +16,18 @@ services:
       - ~/docker_compose/backup:/var/opt/mssql/backup
       - ~/docker_compose/data:/var/opt/mssql/data
 
+  rabbitmq:
+    image: 'bitnami/rabbitmq:latest'
+    environment:
+      - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
+      - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
+    ports:
+      - 5672:5672
+      - 5671:5671
+      - 15672:15672
+    networks:
+      rabbitmq-network:
+
   api:
     image: digitalexcellence/api:latest
     container_name: api
@@ -33,6 +45,9 @@ services:
       - App__Frontend__ClientId=${PRODUCTION_API_FRONTEND_CLIENT_ID}
       - App__Frontend__ClientSecret=${PRODUCTION_API_FRONTEND_CLIENT_SECRET}
       - App__IdentityServer__IdentityUrl=https://identity.dex.software
+      - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
+      - App__RabbitMQ__Username=${App__RabbitMQ__Username}
+      - App__RabbitMQ__Password=${App__RabbitMQ__Password}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.entrypoints=http"
@@ -91,6 +106,26 @@ services:
       - "traefik.http.routers.identity-secure.service=identity"
       - "traefik.http.services.identity.loadbalancer.server.port=80"
       - "traefik.docker.network=proxy"
+
+  notificationservice:
+    build:
+      context: .
+      dockerfile: NotificationSystem/Dockerfile
+    depends_on:
+      - rabbitmq
+    environment:
+      - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
+      - App__RabbitMQ__Username=${App__RabbitMQ__Username}
+      - App__RabbitMQ__Password=${App__RabbitMQ__Password}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
+    stdin_open: true
+    tty: true
+    deploy:
+      restart_policy:
+        condition: on-failure
+    networks:
+      rabbitmq-network:
 
   frontend:
     image: digitalexcellence/frontend:latest
