--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -5,12 +5,12 @@ services:
    image: digitalexcellence/database
    container_name: db
    restart: unless-stopped
-   ports:                                                                                                       
-     - 1433:1433                                                                                                    
-   networks:                                                                                                     
-     mssql-network:                                                                                              
-       ipv4_address: 172.16.238.2                                                                                
-   environment:                                                                                                  
+   ports:
+     - 1433:1433
+   networks:
+     mssql-network:
+       ipv4_address: 172.16.238.2
+   environment:
      - MSSQL_SA_PASSWORD=${STAGING_DATABASE_PASSWORD}
    volumes:
      - ~/docker_compose/create-trigger-new-user.sql:/opt/create-trigger-new-user.sql
@@ -22,7 +22,19 @@ services:
      - ~/docker_compose/create-trigger.sql:/opt/create-trigger.sql
      - ~/docker_compose/backup:/var/opt/mssql/backup
      - ~/docker_compose/data:/var/opt/mssql/data
-  
+
+  rabbitmq:
+    image: 'bitnami/rabbitmq:latest'
+    environment:
+      - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
+      - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
+    ports:
+      - 5672:5672
+      - 5671:5671
+      - 15672:15672
+    networks:
+      rabbitmq-network:
+
   api:
     image: digitalexcellence/api
     container_name: api
@@ -42,6 +54,9 @@ services:
       - App__Frontend__ClientSecret=${STAGING_API_FRONTEND_CLIENT_SECRET}
       - App__IdentityServer__IdentityUrl=https://identity.staging.dex.software
       - SENTRY_DSN=https://c4cad5ec89d74853a66347a7b19c213b@o395685.ingest.sentry.io/5247967
+      - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
+      - App__RabbitMQ__Username=${App__RabbitMQ__Username}
+      - App__RabbitMQ__Password=${App__RabbitMQ__Password}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.entrypoints=http"
@@ -55,7 +70,7 @@ services:
       - "traefik.http.routers.api-secure.service=api"
       - "traefik.http.services.api.loadbalancer.server.port=80"
       - "traefik.docker.network=proxy"
- 
+
   identity:
     image: digitalexcellence/identity:latest
     container_name: identity
@@ -103,6 +118,26 @@ services:
       - "traefik.http.services.identity.loadbalancer.server.port=80"
       - "traefik.docker.network=proxy"
 
+  notificationservice:
+    build:
+      context: .
+      dockerfile: NotificationSystem/Dockerfile
+    depends_on:
+      - rabbitmq
+    environment:
+      - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
+      - App__RabbitMQ__Username=${App__RabbitMQ__Username}
+      - App__RabbitMQ__Password=${App__RabbitMQ__Password}
+      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
+      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
+    stdin_open: true
+    tty: true
+    deploy:
+      restart_policy:
+        condition: on-failure
+    networks:
+      rabbitmq-network:
+
   frontend:
     image: digitalexcellence/stagingfrontend
     container_name: frontend
@@ -110,7 +145,7 @@ services:
       - proxy
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.entrypoints=http"                                 
+      - "traefik.http.routers.frontend.entrypoints=http"
       - "traefik.http.routers.frontend.rule=Host(`staging.dex.software`)"
       - "traefik.http.middlewares.frontend-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.frontend.middlewares=api-https-redirect"
@@ -123,13 +158,13 @@ services:
       - "traefik.docker.network=proxy"
 
 networks:
-  mssql-network:                                                                        
-    internal: true                                                                      
-    driver: bridge                                                                       
-    ipam:                                                                              
-      driver: default                                                                  
-      config:                                                                        
-        - subnet: 172.16.238.0/24  
+  mssql-network:
+    internal: true
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.238.0/24
 
   proxy:
     external: true
