--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -5,19 +5,19 @@ services:
     build:
       context: .
       dockerfile: Data/Dockerfile
-    environment: 
+    environment:
       - MSSQL_SA_PASSWORD=${DB_PASSWORD}
     image: digitalexcellence/database
     networks:
       mssql-network:
         ipv4_address: 172.16.238.2
-  
+
   rabbitmq:
     image: 'bitnami/rabbitmq:latest'
     environment:
       - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
       - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
-    ports: 
+    ports:
       - 5672:5672
       - 5671:5671
       - 15672:15672
@@ -30,7 +30,7 @@ services:
       dockerfile: API/Dockerfile
     depends_on:
       - db
-    environment:   
+    environment:
       - ConnectionStrings__DefaultConnection=${CONNECTION_STRING}
       - App__Frontend__FrontendUrl=${FRONTEND_URL}
       - App__Frontend__ClientId=${FRONTEND_CLIENT_ID}
@@ -60,7 +60,7 @@ services:
       - App__Frontend__RedirectUriFrontendPostman=${REDIRECT_URI_FRONTEND_POSTMAN}
       - App__Frontend__PostLogoutUrisFrontend=${POST_LOGOUT_URIS_FRONTEND}
       - App__Frontend__ClientId=${FRONTEND_CLIENT_ID}
-      - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}      
+      - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}
       - App__swagger__RedirectUrisSwagger=${REDIRECT_URIS_SWAGGER}
       - App__swagger__PostLogoutUrisSwagger=${POST_LOGOUT_URIS_SWAGGER}
       - App__FfhictOIDC__ClientId=${FFHICTOIDC_CLIENT_ID}
@@ -68,7 +68,7 @@ services:
       - App__FfhictOIDC__RedirectUri=${FFHICTOIDC_REDIRECT_URI}
       - SENTRY_DSN=${SENTRY_DSN}
     image: digitalexcellence/identity
-  
+
   notificationservice:
     build:
       context: .
@@ -79,8 +79,8 @@ services:
       - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
       - App__RabbitMQ__Username=${App__RabbitMQ__Username}
       - App__RabbitMQ__Password=${App__RabbitMQ__Password}
-      - SENDGRID_API_KEY=${SENDGRID_API_KEY}
-      - SENDGRID_EMAIL_FROM=${SENDGRID_EMAIL_FROM}
+      - App__SendGrid__ApiKey=${App__SendGrid__ApiKey}
+      - App__SendGrid__EmailFrom=${App__SendGrid__EmailFrom}
     stdin_open: true
     tty: true
     deploy:
