--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build-env
 
 ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
 
@@ -14,15 +14,16 @@ COPY . ./
 
 RUN dotnet dev-certs https --clean
 RUN dotnet dev-certs https -ep ./dex-identity.pfx -p W64x4AD8dNj9kImdX3tayS
+RUN dotnet dev-certs https --trust
 
 RUN dotnet build
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
 WORKDIR /app
 
 COPY --from=build-env /app/IdentityServer/bin/Debug/netcoreapp3.1 .
 COPY --from=build-env /app/IdentityServer/wwwroot ./wwwroot
-COPY --from=build-env /app/dex-identity.pfx . 
+COPY --from=build-env /app/dex-identity.pfx .
 
 ENTRYPOINT ["dotnet", "6_IdentityServer.dll", "--environment=Development"]
