--- a/NotificationSystem/Dockerfile
+++ b/NotificationSystem/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build-env
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ COPY . ./
 
 RUN dotnet publish NotificationSystem/NotificationSystem.csproj -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
 WORKDIR /app
 
