--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -14,7 +14,7 @@ COPY . ./
 
 RUN dotnet dev-certs https --clean
 RUN dotnet dev-certs https -ep ./dex-identity.pfx -p W64x4AD8dNj9kImdX3tayS
-RUN dotnet dev-certs https --trust
+RUN security set-key-partition-list -D localhost -S unsigned:,teamid:UBF8T346G9
 
 RUN dotnet build
 
