Update production dockerfiles to retrieve from correct repo as well

--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build-env
 
 WORKDIR /app
 
@@ -44,7 +44,7 @@ RUN dotnet tool install --tool-path ./ dotnet-certificate-tool --version 2.0.1
 
 RUN dotnet publish IdentityServer/6_IdentityServer.csproj -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
 WORKDIR /app
 
