--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -13,7 +13,7 @@ services:
         ipv4_address: 172.16.238.2
 
   rabbitmq:
-    image: 'bitnami/rabbitmq:latest'
+    image: 'bitnami/rabbitmq:3.8.9'
     environment:
       - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
       - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
