--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -17,7 +17,9 @@ services:
       - ~/docker_compose/data:/var/opt/mssql/data
 
   rabbitmq:
+    container_name: rabbitmq
     image: 'bitnami/rabbitmq:3.8.9'
+    restart: unless-stopped
     environment:
       - RABBITMQ_USERNAME=${App__RabbitMQ__Username}
       - RABBITMQ_PASSWORD=${App__RabbitMQ__Password}
@@ -31,6 +33,7 @@ services:
   api:
     image: digitalexcellence/api:latest
     container_name: api
+    restart: on-failure
     networks:
       - proxy
       - mssql-network
@@ -65,6 +68,9 @@ services:
   identity:
     image: digitalexcellence/identity:latest
     container_name: identity
+    restart: on-failure
+    depends_on:
+      - db
     networks:
       - proxy
       - mssql-network
@@ -108,6 +114,9 @@ services:
       - "traefik.docker.network=proxy"
 
   notificationservice:
+    container_name: notificationservice
+    image:  digitalexcellence/notificationservice
+    restart: on-failure
     build:
       context: .
       dockerfile: NotificationSystem/Dockerfile
@@ -121,7 +130,6 @@ services:
       - App__SendGrid__EmailFrom=${App__SendGrid__EmailFrom}
     stdin_open: true
     tty: true
-    image:  digitalexcellence/notificationservice
     deploy:
       restart_policy:
         condition: on-failure
