--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "test",
-            "EmailFrom": "test"
+            "ApiKey": "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",
+            "EmailFrom": "meesvanstraten@gmail.com"
         }
     },
     "Logging": {
