Revert "added some http catch to userTask controller"
This reverts commit cd68fadff4ba31492eacb90036139a4b3ed21ed0.

--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "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",
-            "EmailFrom": "meesvanstraten@gmail.com"
+            "ApiKey": "test",
+            "EmailFrom": "test"
         }
     },
     "Logging": {
