Update Assembly Versions & Changelog.md

--- a/Repositories.Tests/3_Repositories.Tests.csproj
+++ b/Repositories.Tests/3_Repositories.Tests.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Version>0.9.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
