--- a/API/1_API.csproj
+++ b/API/1_API.csproj
@@ -6,6 +6,7 @@
     <DocumentationFile>.\API.xml</DocumentationFile>
     <Company>Digital Excellence Fontys</Company>
     <LangVersion>8</LangVersion>
+    <Version>0.9.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
