--- a/Models/5_Models.csproj
+++ b/Models/5_Models.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
+        <Version>0.9.0-beta</Version>
     </PropertyGroup>
 
 </Project>
