--- a/Services.Tests/2_Services.Tests.csproj
+++ b/Services.Tests/2_Services.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Version>0.9.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
