--- a/Repositories/3_Repositories.csproj
+++ b/Repositories/3_Repositories.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MessageBrokerPublisher\MessageBrokerPublisher.csproj" />
     <ProjectReference Include="..\Models\5_Models.csproj" />
   </ItemGroup>
 
