added config files and loading the config from .json file

--- a/ElasticSynchronizer/appsettings.Development.json
+++ b/ElasticSynchronizer/appsettings.Development.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "App": {
+        "RabbitMQ": {
+            "Hostname": "localhost",
+            "Username": "guest",
+            "Password": "guest"
+        },
+        "Elastic": {
+            "Hostname": "http://localhost:9200/",
+            "Username": "elastic",
+            "Password": "changeme",
+            "IndexUrl": "projects/_doc/"
+        }
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
