--- a/ElasticSynchronizer/Properties/launchSettings.json
+++ b/ElasticSynchronizer/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "profiles": {
     "ElasticSynchronizer": {
       "commandName": "Project",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        "ELASTIC_DOTNET_ENVIRONMENT": "Development"
       }
     }
   }
