updated appsettings.json file

--- a/ElasticSynchronizer/appsettings.json
+++ b/ElasticSynchronizer/appsettings.json
@@ -1,9 +1,23 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "App": {
+        "RabbitMQ": {
+            "Hostname": "",
+            "Username": "",
+            "Password": ""
+        },
+        "Elastic": {
+            "Hostname": "",
+            "Username": "",
+            "Password": "",
+            "IndexUrl": ""
+        }
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     }
-  }
 }
