Testing the integration with sendgrid in sandbox mode

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,6 +24,9 @@ jobs:
 
     - name: Test
       run: dotnet test --no-restore --verbosity normal
+      env:
+        App__SendGrid__ApiKey: ${{secrets.App__SendGrid__ApiKey}}
+        App__SendGrid__EmailFrom: ${{secrets.App__SendGrid__EmailFrom}}
 
   integration-test:
     runs-on: ubuntu-18.04
