--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -7,7 +7,8 @@
         },
         "SendGrid": {
             "ApiKey": "test",
-            "EmailFrom": "test"
+            "EmailFrom": "test",
+            "SandboxMode": false
         }
     },
     "Logging": {
