--- a/NotificationSystem/appsettings.json
+++ b/NotificationSystem/appsettings.json
@@ -7,7 +7,8 @@
         },
         "SendGrid": {
             "ApiKey": "",
-            "EmailFrom": ""
+            "EmailFrom": "",
+            "SandboxMode":  false
         }
     },
     "Logging": {
