--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "test",
-            "EmailFrom": "test",
+            "ApiKey": "",
+            "EmailFrom": "",
             "SandboxMode": false
         }
     },
