--- a/IdentityServer/Dockerfile.dev
+++ b/IdentityServer/Dockerfile.dev
@@ -10,7 +10,7 @@ ARG BuildConfiguration=Debug
 
 WORKDIR /app
 
-COPY . ./
+COPY . .
 
 RUN dotnet dev-certs https --clean
 RUN dotnet dev-certs https -ep ./dex-identity.pfx -p W64x4AD8dNj9kImdX3tayS
