--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     environment:
       - ConnectionStrings__DefaultConnection=Server=db;Database=identity;User=sa;Password=Dexcelence!1;
       - App__Self__IssuerUri=https://identity:5005
-      - App__Api__DeXApiUrl=https://api:5001
+      - App__Api__DeXApiUrl=https://api:5009
       - ASPNETCORE_URLS=http://+:5004;https://+:5005;
       - ASPNETCORE_HTTPS_PORT=5005
       - ASPNETCORE_Kestrel__Certificates__Default__Password=W64x4AD8dNj9kImdX3tayS
@@ -65,6 +65,25 @@ services:
     networks:
       rabbitmq-network:
 
+  elasticsynchronizer:
+    container_name: elasticsynchronizer
+    restart: on-failure
+    build: 
+      context: .
+      dockerfile: ElasticSynchronizer/Dockerfile
+    depends_on: 
+      - rabbitmq
+    environment:
+      - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
+      - App__RabbitMQ__Username=${App__RabbitMQ__Username}
+      - App__RabbitMQ__Password=${App__RabbitMQ__Password}
+      - App__Elastic__Hostname=${App__Elastic__Hostname}
+      - App__Elastic__Username=${App__Elastic__Username}
+      - App__Elastic__Password=${App__Elastic__Password}
+      - App__Elastic__IndexUrl=${App__Elastic__IndexUrl}
+    networks:
+      rabbitmq-network:  
+
   api:
     container_name: api
     restart: on-failure
@@ -76,8 +95,8 @@ services:
     environment:
       - ConnectionStrings__DefaultConnection=Server=db;Database=master;User=sa;Password=Dexcelence!1;
       - App__IdentityServer__IdentityUrl=http://identity:5004
-      - ASPNETCORE_URLS=http://+:5000;https://+:5001;
-      - ASPNETCORE_HTTPS_PORT=5001
+      - ASPNETCORE_URLS=http://+:5008;https://+:5009;
+      - ASPNETCORE_HTTPS_PORT=5009
       - ASPNETCORE_Kestrel__Certificates__Default__Password=xI90DrNea7M6UJFNDwip6t
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/app/dex-api.pfx
       - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
@@ -87,11 +106,8 @@ services:
       mssql-network:
       rabbitmq-network:
     ports:
-      - 5000:5000
-      - 5001:5001
-    deploy:
-       restart_policy:
-        condition: on-failure
+      - 5008:5008
+      - 5009:5009
 
   elasticsearch:
     build:
