resolved several review issues
Added summary's, removed unnecessary values in appsettings, GetExpectedGraduatingUsers now expects a parameter so the amount of months can be changed more easily.

--- a/JobScheduler/appsettings.json
+++ b/JobScheduler/appsettings.json
@@ -8,12 +8,12 @@
     },
     "App": {
         "API": {
-            "ApiUrl": "https://localhost:5001/"
+            "ApiUrl": ""
         },
         "IdentityServerConfig": {
-            "IdentityUrl": "https://localhost:5005/",
-            "ClientId": "dex-jobscheduler",
-            "ClientSecret": "dex-jobscheduler"
+            "IdentityUrl": "",
+            "ClientId": "",
+            "ClientSecret": ""
         }
     }
 
