added comments to make clear why appsettings.json files are renamed.

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -1,7 +1,8 @@
+// Appsettings is renamed because of an issue where the project loaded another appsettings.json
+
 {
     "ConnectionStrings": {
-        "DefaultConnection":
-            "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "App": {
         "Frontend": {
@@ -11,10 +12,10 @@
         },
         "IdentityServer": {
             "IdentityUrl": "https://localhost:5005",
-            "DevelopmentIdentityUrl":  "https://localhost:5005"
+            "DevelopmentIdentityUrl": "https://localhost:5005"
         },
         "Swagger": {
-            "ClientId":  "Swagger-UI"
+            "ClientId": "Swagger-UI"
 
         }
     },
