--- a/NotificationSystem/appsettingsnotificationsystem.json
+++ b/NotificationSystem/appsettingsnotificationsystem.json
@@ -1,3 +1,5 @@
+// Appsettings is renamed because of an issue where the project loaded another appsettings.json
+
 {
     "App": {
         "RabbitMQ": {
