added attributes for job scheduler config.
Time range for expected graduation users and time between jobs are now configuration attributes.
Also added summaries for configuration related models.

--- a/JobScheduler/appsettingsjobscheduler.Development.json
+++ b/JobScheduler/appsettingsjobscheduler.Development.json
@@ -1,3 +1,5 @@
+// Appsettings is renamed because of an issue where the project loaded another appsettings.json
+
 {
     "Logging": {
         "LogLevel": {
@@ -6,9 +8,12 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "App": {
-        
-        "API": {
+    "Config": {
+        "JobSchedulerConfig": {
+            "TimeRange": 6,
+            "TimeBetweenJobsInMs": 10000
+        },
+        "ApiConfig": {
             "ApiUrl": "https://localhost:5001/"
         },
         "IdentityServerConfig": {
