added comment to make configuration more clear

--- a/JobScheduler/appsettingsjobscheduler.Development.json
+++ b/JobScheduler/appsettingsjobscheduler.Development.json
@@ -10,6 +10,7 @@
     },
     "Config": {
         "JobSchedulerConfig": {
+            // Gets expected graduation users between now and time range (in months).
             "TimeRange": 6,
             "TimeBetweenJobsInMs": 10000
         },
