Remove SendGrid API key.

--- a/NotificationSystem/appsettings.Development.json
+++ b/NotificationSystem/appsettings.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "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",
-            "EmailFrom": "n.mak@student.fontys.nl",
+            "ApiKey": "",
+            "EmailFrom": "",
             "SandboxMode": false
         }
     },
