added ElasticConfig to API project. Added methods for getting recommendations. Not finished yet.
Method: get similar users already works.

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -11,10 +11,16 @@
         },
         "IdentityServer": {
             "IdentityUrl": "https://localhost:5005",
-            "DevelopmentIdentityUrl":  "https://localhost:5005"
+            "DevelopmentIdentityUrl": "https://localhost:5005"
+        },
+        "Elastic": {
+            "Hostname": "http://localhost:9200/",
+            "Username": "elastic",
+            "Password": "changeme",
+            "IndexUrl": "projectskeyword5/"
         },
         "Swagger": {
-            "ClientId":  "Swagger-UI"
+            "ClientId": "Swagger-UI"
 
         }
     },
