--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -12,6 +12,12 @@
         "IdentityServer": {
             "IdentityUrl": ""
         },
+        "Elastic": {
+            "Hostname": "",
+            "Username": "",
+            "Password": "",
+            "IndexUrl": ""
+        },
         "Swagger": {
             "ClientId": "Swagger-UI"
 
