Moved elastic rest call to repository layer, finished recommendation service method

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -11,13 +11,12 @@
         "IdentityServer": {
             "IdentityUrl": "https://localhost:5005",
             "DevelopmentIdentityUrl": "https://localhost:5005"
-            "DevelopmentIdentityUrl": "https://localhost:5005"
         },
         "Elastic": {
-            "Hostname": "http://localhost:9200/",
+            "Hostname": "localhost",
             "Username": "elastic",
             "Password": "changeme",
-            "IndexUrl": "projectskeyword5/"
+            "IndexUrl": "projectsdevelop/"
         },
         "Swagger": {
             "ClientId": "Swagger-UI"
