--- a/Repositories/3_Repositories.csproj
+++ b/Repositories/3_Repositories.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,12 +7,34 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <None Remove="ElasticSearch\Queries\IndexProjects.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="ElasticSearch\Queries\IndexProjects.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data\4_Data.csproj" />
     <ProjectReference Include="..\MessageBrokerPublisher\MessageBrokerPublisher.csproj" />
     <ProjectReference Include="..\Models\5_Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ElasticSearch\Queries\GetProjectRecommendations.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ElasticSearch\Queries\GetSimilarUsers.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
