changed dev index url, changed user controller similar projects to return the list

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -16,7 +16,7 @@
             "Hostname": "localhost",
             "Username": "elastic",
             "Password": "changeme",
-            "IndexUrl": "projectsdevelop/"
+            "IndexUrl": "projects/"
         },
         "Swagger": {
             "ClientId": "Swagger-UI"
