Added update elastic when liking or unliking project

--- a/ElasticSynchronizer/appsettings.Development.json
+++ b/ElasticSynchronizer/appsettings.Development.json
@@ -2,14 +2,14 @@
     "App": {
         "RabbitMQ": {
             "Hostname": "localhost",
-            "Username": "guest",
-            "Password": "guest"
+            "Username": "test",
+            "Password": "test"
         },
         "Elastic": {
-            "Hostname": "http://localhost:9200/",
+            "Hostname": "localhost",
             "Username": "elastic",
             "Password": "changeme",
-            "IndexUrl": "projects/_doc/"
+            "IndexUrl": "projects/"
         }
     },
 
