Changed messagebroker publisher connection factory to accept the connection values as parameters. Added RabbitMQ to config, changed appsettings values for testing purposes

--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -15,6 +15,11 @@
         "Swagger": {
             "ClientId": "Swagger-UI"
 
+        },
+        "RabbitMQ": {
+            "Hostname": "localhost",
+            "Username": "guest",
+            "Password": "guest"
         }
     },
     "Logging": {
