--- a/NotificationSystem/appsettingsnotificationsystem.Development.json
+++ b/NotificationSystem/appsettingsnotificationsystem.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "",
-            "EmailFrom": "",
+            "ApiKey": "test",
+            "EmailFrom": "test@test.nl",
             "SandboxMode": false
         }
     },
