--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -14,8 +14,12 @@
         },
         "Swagger": {
             "ClientId": "Swagger-UI"
-
-        }
+        },
+        "RabbitMQ": {
+            "Hostname": "localhost",
+            "Username": "guest",
+            "Password": "guest"
+        }        
     },
     "Logging": {
         "LogLevel": {
