Fixed oauth flow for retrieving tokens

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -15,7 +15,11 @@
         "Swagger": {
             "ClientId": "Swagger-UI"
 
-        }
+        },
+        "Github": {
+            "ClientId": "",
+            "ClientSecret": ""
+        } 
     },
     "Logging": {
         "LogLevel": {
