update broken functionality after merge with develop

--- a/JobScheduler/appsettingsjobscheduler.Development.json
+++ b/JobScheduler/appsettingsjobscheduler.Development.json
@@ -18,6 +18,11 @@
             "IdentityUrl": "https://localhost:5005/",
             "ClientId": "dex-jobscheduler",
             "ClientSecret": "dex-jobscheduler"
+        },
+        "RabbitMQ": {
+            "Hostname": "localhost",
+            "Username": "test",
+            "Password": "test"
         }
     }
 }
