--- a/JobScheduler/appsettingsjobscheduler.json
+++ b/JobScheduler/appsettingsjobscheduler.json
@@ -8,7 +8,7 @@
     },
     "Config": {
         "JobSchedulerConfig": {
-            "TimeRange": 6, 
+            "TimeRange": 6,
             "TimeBetweenJobsInMs": 10000
         },
         "ApiConfig": {
@@ -18,6 +18,11 @@
             "IdentityUrl": "",
             "ClientId": "",
             "ClientSecret": ""
+        },
+        "RabbitMQ": {
+            "Hostname": "",
+            "Username": "",
+            "Password": ""
         }
     }
 }
