--- a/NotificationSystem/appsettingsnotificationsystem.Development.json
+++ b/NotificationSystem/appsettingsnotificationsystem.Development.json
@@ -2,8 +2,8 @@
     "App": {
         "RabbitMQ": {
             "Hostname": "localhost",
-            "Username": "guest",
-            "Password": "guest"
+            "Username": "test",
+            "Password": "test"
         },
         "SendGrid": {
             "ApiKey": "test",
